Adiciona endpoint para utilizar cartao de pontos
